[package]
name = "save-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steamlocate = "*"
structopt = "*"
include_dir = "*"
reqwest = { version = "*", features = ["blocking", "rustls"] }
pyo3 = { version = "*", features = ["auto-initialize"] }
walkdir = "*"
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dirs = "*"
eframe = { version = "*", optional = true }
